Adjust mobile breakpoint to fix text wrap issue in about card; simplify image widths in mobile layout

--- a/css/styles.css
+++ b/css/styles.css
@@ -300,7 +300,7 @@ a {
     mask-image: var(--email-icon);
 }
 
-@media (max-width: 1200px) and (min-width: 751px) {
+@media (max-width: 1200px) and (min-width: 766px) {
     .about-card {
         display: block;
         padding-top: 150px;
@@ -337,7 +337,7 @@ a {
     }
 }
 
-@media (max-width: 750px) {
+@media (max-width: 765px) {
     header::before {
         clip-path: polygon(0% 0%, 100% 0%, 100% 18%, 0% 36%);
     }
@@ -355,7 +355,7 @@ a {
     }
 
     .about-card .image {
-        width: calc(100vw - 2 * var(--border-padding-small));
+        width: 100%;
         height: 75vh;
         box-shadow: var(--box-shadow);
         margin-bottom: 100px;
@@ -429,7 +429,7 @@ a {
     }
 
     footer img {
-        width: 100vw;
+        width: 100%;
         height: 75vh;
     }
 }
